--- a/PharmacyManagement/PharmacyManagement/Adminstrator.resx
+++ b/PharmacyManagement/PharmacyManagement/Adminstrator.resx
@@ -248,7 +248,7 @@
         RK5CYII=
 </value>
   </data>
-  <data name="guna2Button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAddUser.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         DAAACwwBP0AiyAAAB4tJREFUSEutVnlUk1cWh4SwM4JLLQJFIipbEhZJkLDITpAEkcVSejwW3Fot1Dk6
@@ -303,7 +303,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DQAACw0B7QfALAAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAN8sSURBVHhe7F0F
+        DAAACwwBP0AiyAAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAN8sSURBVHhe7F0F
         dBzXshSzmZmZmWRmZlu2zMyWmZmZmZmZ2U5itmOIKYbYjsPMyQvV7+qZWY3WoyTv/bBX59TZ1WhJO1PV
         1X373usFwAMPPHhB4XjQAw88eDHgeNADDzx4MeB40AMPfgvSpEnbNHXq1FGpU6eJSiNIlSr1pGRJk51O
         kTzFrjRp5FiatC44Pd+Dvx6OBz3wwELp8NLxy5QuU65s6bKjy5Ypt7tc2fKny5crjwrlKqBokaIoWKAg
