--- a/PharmacyManagement/PharmacyManagement/PharmacistUC/UC_P_SellMedicine.resx
+++ b/PharmacyManagement/PharmacyManagement/PharmacistUC/UC_P_SellMedicine.resx
@@ -117,12 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="guna2Elipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>16, 17</value>
-  </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>60</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnSync.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -167,7 +161,7 @@
         5vYX0Be5jU/8J386a4T/5I+n/z1ISPgHQk6aCaeyCxoAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         R0lGODlh7gLuAqIFAEE5X/CQe/XdhZva2aCCwQAAAAAAAAAAACH/C05FVFNDQVBFMi4wAwEAAAAh/wtY
         TVAgRGF0YVhNUDw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2VoaUh6cmVTek5UY3prYzlk
@@ -1181,41 +1175,93 @@
         4AI+4ARe4AZ+4Aie4KeTAAA7
 </value>
   </data>
-  <data name="label11.Text" xml:space="preserve">
+  <data name="btnAddToCart.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-Yönetici, en yüksek düzeydeki roldür.
-erişim.
-Yöneticiler içerik ekleyebilir ve tümüne erişebilir
-Yönetici Araç Çubuğundaki öğeler.
-
-Bu, Yöneticilerin kontrol edebileceği anlamına gelir
-tasarım vb. gibi ayarlar
-
-Diğer yönetici kullanıcılarını ekleyebilir ve silebilir</value>
+        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAABGdBTUEAALGPC/xhBQAABDZJREFUWEft
+        mNlvG0Ucxw0SEjwhVHFIQJH4C0C88IR44AFxSDzQvlTxubt27KiiIvFesXFSH3HiK7Excm2vj6Q0TeKE
+        QhJi4jRUKoUWGtJDIqJBqZAAlUKPkCghcTP8HM1KUMbRepMqRuIjfWXP/PY3359nd3Z2rflPoE+xbxqz
+        /DVjSkSU24cYPvILw4dKNB95Ax+yuxgzwm+93w6h/MwgMknCdUqIPM7w4bcYLjwHn3582O5hlPgbfbMF
+        1Dc7hAxQLO7W2PjYHijwipkLvYq7dofNU5zhbxgl4Xddin0dd29CC2E9FFnAzfrDwPc8CgXe1GjQfbir
+        /oACfzKJgWdws/6gnV3zVKS91JBi7dqk/W1tinueSbAP4/DuQ3v85w/GAxueYqzMDvuXG486l3QSWzZI
+        /DKdF+fNva1F+N7VkLab9EnuZW2C3etyue7H6fcek8+TPBgIrX92dQr9XaNXJlD/xRGUPHsUhT9PofZP
+        u1ffHfTeZvKtS9qUfcMgccumrPA9lRPHoN2hS9oZrdT8ilHintUgzc5d0zq/+4C5LVi+u8CtNLEwiYa/
+        G0W5mQEUP51FHZPxdeFEYKnpWNttmO0/9Wl2De4cP5sywmmtZE/CD2AbUi37dEnuhX0Dhx7C1sqweb17
+        aCGExucnicXUquJCabP4PBT//hc55C99sMaPdN1q+tB1E4pe0aXtazD7X2J7ZdCOQDl3pkA0rCYZUmwr
+        xWDGqbz4MbZWBnO485q/IBEHrCYZUmwriSeCf8Ap12FrZVAe3yn2SHSDNGA1yZBiVbUwheC6XNFnWp7A
+        1sqAlRyydQT/tZK3kgwpVk3HLowgU068im2VQ3kPv8Y4A3dIg8pSCilXVnA6CfdXLoptlaN3uR5kYCV/
+        MlckDlyRUki5sg4d99zSp1rUPT0xbcHVxHQ/cWCSZEgxksZ/KCJDmlut+T4ow7g7f3QfTxIHJ0mGFCNJ
+        +rof0dnWc9iudkw+33hzPKp4R5EhxUhyT8RWtGmWw3a1Y/R73rN6la9kGVKMJEuvY1F/pOU5bFc7lN/1
+        It0aquleqFSVrc+Q4Re39xAByYwY2hi6NEY02Y4qezI8+YxgJ/Uw7Z3LsWIf0UStKqv3nQHPEjwkHMA2
+        6qE8/jljsA3BXrljgsLuUBmhwCSYB7CNehghbAMlcLP+MLORl+Al6gxu1h+NXPwRKHDx/9fQ7QAFFuE6
+        /Mc/EHWFmYuwUGQcN+sPqxh8GmbwOi2E1W9L9xp4y9sPs/grw0fMluaux3B3fVGZQUbsLlodPesWsRtZ
+        HVEERStSo6MH3Z2Dh91ZrM7YN+HsWHmwNItCmdFykzN6FoeqoiZHNRahe7Vw8gL66NRlNDQ1iyptHKqK
+        mhzV2Jyxc5XZGJ6+uDkb0P4Kh6qiJkc1lL3nKbgGZ8x8BIyi5y1i6EkcqoqanDpFo/kLgsq+P4O6ex0A
+        AAAASUVORK5CYII=
+</value>
   </data>
-  <data name="label15.Text" xml:space="preserve">
-    <value>Yönetici, en yüksek düzeydeki roldür.
-erişim.
-
-Yöneticiler içerik ekleyebilir ve tümüne erişebilir
-Yönetici Araç Çubuğundaki öğeler.
-
-Bu, Yöneticilerin kontrol edebileceği anlamına gelir
-tasarım vb. gibi ayarlar
-
-Diğer yönetici kullanıcılarını ekleyebilir ve silebilir</value>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="btnRemove.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAABDBJREFUeF7t
+        W0trE1EUju/HwgfiSheKooKo+MCFuKiKj6K5MxFCS2vunURIXSiCy4q1CiqKCy2CGzcKBf+DK1FrlUrV
+        VqnWZmaSWrppfVQUE9t4bnJK0slNmjSvefSDD5LMueec787MnXMn97pmUWboxxtWhgkjmkSbVYk91CSl
+        U5OYCvwGjCP5Z/hN6Uza0GZdUty8LbqxFlS3skWX6A2N0LcgbDxNaKHkbbuhY66FSGAzujcnuoLBBbrE
+        KCT8Mk1Aqdmhy4qPx8Kw1ccHr3ehTuh5SE43JFtGUg2urrNV74iQzI5ohA2Ik6wIv+hEOYzpVA4Rr3cJ
+        BL8HnEhLplqEcYK2qTXKYkyvvNDc/l0Q9JMhCROQ9sFtsRPTLA/45QbBfmUGNw3HdJkdwnRLC5VQBgH+
+        GQKakVFVonWYdmmguqkEjmOGQGZmjBdSmH5xUCXfUXAYNQSwAv8W/YQY8NBN4Ci9ZLUaR8My24ByCkN/
+        beMycGDC0b5g9gy5g0tRVv6AAueBwJklCSX6fZSVH1SiHBM5sjQJPYDycqO/9twiVWafhU6szd685g5w
+        9s8IGtuDMjuNMsXgZx8MIxkN7UOdz15RbiY0ogQEjWxFXtGi3EyAQbexgQ3ZhXKnIkTodoGxLam72VaU
+        nQLMoq6LjG1JQq+i7BRUib0XGtuRMnuDspPo9/pXwwEzvN2pFMcHPXQVyueDH/UIjGxN/l8Fyk9c/ldE
+        RrkYrm+KD1+6GR9uuVVdQg48F1GOuQjzgxaUDwOgpDwWGeXin3cf42bB7+4eYY65SdtRPtwCMCiIjbIz
+        Gv6K4auPqBYR5piLMN95jfITBVDB5a/VOwCoo/xEB3w3HJyWNuiAUZSf6ICC3/baoANiCfFxl2sOfHFu
+        B3DAF8ffAg4cBKmG8qEDZh+DtF1klIs2KIQeoXxeCbIWsVF28vJz6MJlU1CvK7wUBl5E+YkrwOGTIVlZ
+        AT9a4Z/fUjE24A0uR/lJzGQgtCrhln+FslNw0isxPv1H2SlEyKmNcNAJb4Um4JZfh7KnQiPsmaCBrQiX
+        /1OUmwnogEZRIztRJUo9ys1E3OudB0Z2WBOQjb3x1ta5KFcMVaJNgob2IFECKDM7eA/him6xE+uyY9qz
+        Pwl4JO6GBnYqjKIRSdmG8vIDPCvvChxZk4TdRln5g6+mgDnCC6FDKxEe7fGamvkoqzBgcWTlZXIjmtu3
+        HuXMDCGZ7gVHYwbHVuBYmPj2oIzi4OilspPgq7DB8U9DIDPyh+b2H8S0SwvdQ/dDgFFDQDNxRJP8+zDd
+        8mDwZONaCPTcELj6hNE+coKuwTTLi+RyOtoGgYvZElcqjsP09k7O5W/lQsgT2AEJVPNqeFL1/YS8vuZr
+        7yq7vJb28f2Dedf2lUBiKp18n1DWjZMwUWvgsTCsOeHIrbPZ4MjN09aBy/UfunjKGCH4W0gAAAAASUVO
+        RK5CYII=
+</value>
   </data>
-  <data name="label6.Text" xml:space="preserve">
-    <value>Yönetici, en yüksek düzeydeki roldür.
-erişim.
-
-Yöneticiler içerik ekleyebilir ve tümüne 
-erişebilir
-Yönetici Araç Çubuğundaki öğeler.
-Bu, Yöneticilerin kontrol edebileceği 
-anlamına gelir tasarım vb. gibi ayarlar
-
-Diğer yönetici kullanıcılarını ekleyebilir ve 
-silebilir</value>
+  <data name="btnPurchasePrint.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAABGdBTUEAALGPC/xhBQAAA1FJREFUWEft
+        l+1LU1Ecx0cQQfQv9D8EQfRSULa2NbekgiIifZEkWiJZlFb2oqBMZ4bpnHdzrheVRUQgtLUHH3Jqcxma
+        TjNJ5/M20XTqmPnrnHGU3Xm2e2+6itoXPjgvZ/f7uefcu52Jkkkmmf8tDrFY0SkWzzhSUyFRdEgkM51p
+        aXJSKSxIzuctLoYVtTpheIuKoFMi8ZJKYcFXSDvpToN7SKWwHEpRwO+CVAoL7USJglRyx1aVss+qP8q8
+        Y2SrtBMlClIfP2at9LDVkD712ZQbXJ3UUE+UKIgCPU2V0j3WeoXG3qAK+N2lAHPGMH/FQ2KqlR1AcqN9
+        ppxAaIbZlIsWTETiCpaUlOyyMuk3rAbF0nTv3fVIsT8u+FYn3m8zKJ3drzMDwanaLWIbRAomEpagWSvP
+        sBmV8yOOa6F1P11sg3iCixWl0F9zAZp1x8DOKKFPkw2BinLqWC5Ygo7GU/DDV08ViiaW4ETldSSWAf2m
+        PFgZr4HAaBV0vzwH/dU51PFcsATXvPzkMNGCixX3oKc2C9qMx2FusIw1FovaGRVrPF9YgpEnjcfEx9ss
+        Qc+jq2jWVOC2XALaRS57sKCSVcwXwYJLaMksOjkRLIfh6nx4/+QkzA+jp5kyHt8yrleZMFCzA0tMK4hm
+        3HULLHo5tJwXQ2tdBgzZC2Let6FZHXx4cRZ6tFmwjC6GJsCFYMHQrB7QRxB0PTsDC18fUsdggpNa6Hh6
+        KvwEL1OK+YD3m3jfSfT434NcBMYeQ7NeBS254vAM/CpIzs/aUdPKhIJn1W5UgblOCtN9RSxM2iPUY6Se
+        O7RCIfjc9wF9C8FQa25MGdoxUs8dWilfpnvvgL1BCSOO/LgytGOknju0Yj54nDfDy/qtq4BVHCmCMTMy
+        8LiubP7vcRUC2vzOk3ru0Mq5+NJ2OYR22TDmLGTJUAXRfdn+/EQAi2FR/NrKyMpIPXdoArHAm4kBy8Ug
+        2mUP8p0tC5oti05Wjv5+D4NeOzUHd5N67tBEaKz7DPCpKXvZVq9sx79TkMzClqXTyVe3NVu00GQiwd+z
+        fvcDcDSeXrTq0+1vNIq9+H1mRq6OlrExUvW2ZosWvFTxQD+c1tCSus2MNA/vusnbRLh4x2WSSSaZfyoi
+        0U9lmkKPk4AsxQAAAABJRU5ErkJggg==
+</value>
   </data>
+  <metadata name="guna2Elipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
